// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chat should render Chat component 1`] = `
Array [
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Chat"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        "map": undefined,
        "name": "1psxr7z",
        "next": undefined,
        "styles": "
    display: grid;
    box-sizing: border-box;
    grid-gap: 0.5em 0.5em;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 2fr 1fr;
    grid-template-areas:
        'sidebar main main'
        'sidebar main main'
        'sidebar main main'
        'input input input';
    border: 1px solid #e0e0e0;
    padding: 1em;
    min-height: 100%;
    max-height: 100%;
    & > div {
        border: 1px solid #eee;
        border-radius: 0.2em;
        padding: 0.5em;
        display: flex;
        flex-direction: column;
        overflow-y: scroll;
    }
",
        "toString": [Function],
      }
    }
  />,
]
`;

exports[`Chat should render ChatInput component 1`] = `
Array [
  <ChatInput
    onSelected={
      [MockFunction] {
        "calls": Array [
          Array [
            "Hey, a message",
          ],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  />,
]
`;

exports[`Chat should render ChatLabel component 1`] = `
Array [
  <div>
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="ChatDisplayName"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__="h4"
      css={
        Object {
          "map": undefined,
          "name": "18bu6t0",
          "next": undefined,
          "styles": "
    border-bottom: 1px solid #eee;
",
          "toString": [Function],
        }
      }
    >
      header
    </EmotionCssPropInternal>
    <p>
      value
    </p>
  </div>,
]
`;

exports[`Chat should render ChatMain component 1`] = `
Array [
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="ChatMain"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        "map": undefined,
        "name": "1f702fh",
        "next": undefined,
        "styles": "
    grid-area: main;
",
        "toString": [Function],
      }
    }
  />,
]
`;

exports[`Chat should render ChatSidebar component 1`] = `
Array [
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="ChatSidebar"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        "map": undefined,
        "name": "sh2e66",
        "next": undefined,
        "styles": "
    grid-area: sidebar;
",
        "toString": [Function],
      }
    }
  />,
]
`;

exports[`Chat should render ChatUser component 1`] = `
Array [
  <div>
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="ChatUser"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__="h4"
      css={
        Object {
          "map": undefined,
          "name": "18bu6t0",
          "next": undefined,
          "styles": "
    border-bottom: 1px solid #eee;
",
          "toString": [Function],
        }
      }
    >
      User
    </EmotionCssPropInternal>
    <p>
      Object {
        "nickname": "testUser",
      }
    </p>
  </div>,
]
`;

exports[`Chat should render ChatUserMessage component 1`] = `
Array [
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="ChatUserMessage"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
    css={
      Object {
        "map": undefined,
        "name": "1mzvkn0",
        "next": undefined,
        "styles": "
    max-width: 50%;
    p {
        margin: 5px 0;
    }
    align-self: flex-start;
    
       align-self:flex-end;
    
",
        "toString": [Function],
      }
    }
  >
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="ChatUserMessage"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
      css={
        Object {
          "map": undefined,
          "name": "41qawm",
          "next": undefined,
          "styles": "
    font-size: 1rem;
    background-color: #128c7e;
    
        background-color: #34B7F1;
    
    color: #fff;
    padding: 0.5em;
    border-radius: 0.6em;
    p {
        margin: 0;
    }
",
          "toString": [Function],
        }
      }
    >
      <p>
        hello!
      </p>
    </EmotionCssPropInternal>
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="ChatUserMessage"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
      css={
        Object {
          "map": undefined,
          "name": "1r0slvy",
          "next": undefined,
          "styles": "
    font-size: 0.75rem;
    margin-top: 0.2em;
",
          "toString": [Function],
        }
      }
    >
      <p>
        21
        :
        49
         | 
        testUser
      </p>
    </EmotionCssPropInternal>
  </EmotionCssPropInternal>,
]
`;

exports[`Chat should render ChatUserMessage component 2`] = `
Array [
  <div>
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="ChatInfoMessage"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__="div"
      css={
        Object {
          "map": undefined,
          "name": "w92gfy",
          "next": undefined,
          "styles": "
    p {
        margin-bottom: 3px;
    }
",
          "toString": [Function],
        }
      }
    >
      <p>
        hello!
      </p>
    </EmotionCssPropInternal>
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="ChatInfoMessage"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__="p"
      css={
        Object {
          "map": undefined,
          "name": "1k67m2o",
          "next": undefined,
          "styles": "
    font-size: 12px;
",
          "toString": [Function],
        }
      }
    >
      21
      :
      49
    </EmotionCssPropInternal>
  </div>,
]
`;

exports[`Chat should render ChatUsers component 1`] = `
Array [
  <React.Fragment>
    <EmotionCssPropInternal
      __EMOTION_LABEL_PLEASE_DO_NOT_USE__="ChatUsers"
      __EMOTION_TYPE_PLEASE_DO_NOT_USE__="h4"
      css={
        Object {
          "map": undefined,
          "name": "18bu6t0",
          "next": undefined,
          "styles": "
    border-bottom: 1px solid #eee;
",
          "toString": [Function],
        }
      }
    >
      Online
    </EmotionCssPropInternal>
    <ul>
      <li>
        testUser
      </li>
    </ul>
  </React.Fragment>,
]
`;
